--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GalleryDetailActivity"></activity>
+        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".GalleryDetailActivity" />
         <activity android:name=".SearchGalleryActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.moringaschool.craftypictures.LocationActivity" />
         </activity>
         <activity android:name=".LocationActivity">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.moringaschool.craftypictures.ChoiceActivity" />
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.moringaschool.craftypictures.ChoiceActivity" />
         </activity>
         <activity android:name=".ColorfulActivity">
             <meta-data
